--- a/frontend/src/FeedbackPage.css
+++ b/frontend/src/FeedbackPage.css
@@ -68,3 +68,11 @@
   width: 100%;
   height: 40%;
 }
+
+.error-text {
+  color: red;
+  font-size: 15px;
+  margin-top: 5px;
+  margin-bottom: 10px;
+  margin-left: 1px;
+}
