--- a/frontend/src/FeedbackPage.css
+++ b/frontend/src/FeedbackPage.css
@@ -36,6 +36,23 @@
   padding: 24px;
 }
 
+.feedback-text-h {
+  color: #25324b;
+  font-size: 24px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  word-wrap: "break-word";
+  margin-bottom: 20px;
+}
+
+.feedback-text-h2 {
+  color: #7c8493;
+  font-size: 16px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  word-wrap: "break-word";
+}
+
 .feedback-header {
   display: flex;
   align-items: center;
@@ -64,7 +81,7 @@
   text-decoration: none;
 }
 
-.feedbacktext{
+.feedbacktext {
   width: 100%;
   height: 40%;
 }
